# pc-sys-info-rust

./: Cargo.toml
src/: main.rs  pc_info.rs  utils.rs
